--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@
                     <hr class="bor">
                   </div>
                   <div class="form-actions">
-                    <button type="submit" class="btn w100 btn-primary">查询</button>
+                    <button type="submit" class="bluebtn w100">查询</button>
                   </div>
                   </form>
                   <!-- END FORM-->
